--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,15 +1,22 @@
-<h1> USER SIGN UP PAGE </h1>
+<!-- <h1> USER SIGN UP PAGE </h1> -->
+<div id="signupContainer">
+  <section id="signup">
+    <div class="logo"></div>
+    <h1 class="formHeader">Create An Account</h1>
+    <!-- try to center this! also get ur fonts! -->
+    <div id="formSize">
+      <%= form_for(@user) do |f| %>
+        <%= f.text_field :name, class: 'lineInput', placeholder: 'Name'%>
+        <%= f.text_field :password, class: 'lineInput', placeholder: 'Password'%>
+        <%= f.submit "Sign Up", id: 'signUpBtn'%>
+      <% end %>
 
-<%= form_for(@user) do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-    <%= f.label :password %>
-    <%= f.text_field :password %>
-    <%= f.submit %>
-<% end %>
-
-<% if flash[:errors] %>
-    <% flash[:errors].each do |error| %>
-        <p style ="color: red"><%= error %></p>
-    <% end %>
-<% end %>
+      <% if flash[:errors] %>
+        <% flash[:errors].each do |error| %>
+          <p style ="color: red"><%= error %></p>
+        <% end %>
+      <% end %>
+    </div>
+  </section>
+  <section class="codeGraphic"></section>
+</div>
