--- a/app/assets/stylesheets/snippets.scss
+++ b/app/assets/stylesheets/snippets.scss
@@ -1,69 +1,69 @@
-// Place all the styles related to the snippets controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
-// style for new
-
-body {
-  background-color: #323234;
-}
-
-h1 {
-  color: #fff;
-  text-align: center;
-  text-transform: uppercase;
-}
-
-#snippetContainer {
-  // border: 1px solid red;
-  border-radius: 20px;
-  overflow: hidden;
-  width: 60vw;
-  margin: 0 auto;
-  -webkit-box-shadow: 0px 11px 30px 9px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 11px 30px 9px rgba(0,0,0,0.75);
-  box-shadow: 0px 11px 30px 9px rgba(0,0,0,0.75);
-
-}
-
-#wpContainer {
-  display: flex;
-}
-
-.wpBtn {
-  background-color: #2176FF;
-  color: #fff;
-  height: 50px;
-  line-height: 50px;
-  text-align: center;
-  width: 50%;
-}
-
-form {
-  // border: 1px solid blue;
-  display: flex;
-  flex-direction: column;
-}
-
-input[type="text" i] {
-  background-color: #DBD9DB;
-  border: none;
-  height: 5vh;
-  font-size: 20px;
-  line-height: 20px;
-  padding: 5px 10px 0;
-}
-
-textarea {
-  background-color: #DBD9DB;
-  resize: none;
-  // get a minimum height in here too
-  height: 60vh;
-  padding: 5px 10px 0;
-  border: none;
-}
-
-input[type="submit" i] {
-  border: none;
-  // get a minimum height in here too
-  height: 7vh;
-}
+// // Place all the styles related to the snippets controller here.
+// // They will automatically be included in application.css.
+// // You can use Sass (SCSS) here: https://sass-lang.com/
+// // style for new
+//
+// body {
+//   background-color: #323234;
+// }
+//
+// h1 {
+//   color: #fff;
+//   text-align: center;
+//   text-transform: uppercase;
+// }
+//
+// #snippetContainer {
+//   // border: 1px solid red;
+//   border-radius: 20px;
+//   overflow: hidden;
+//   width: 60vw;
+//   margin: 0 auto;
+//   -webkit-box-shadow: 0px 11px 30px 9px rgba(0,0,0,0.75);
+//   -moz-box-shadow: 0px 11px 30px 9px rgba(0,0,0,0.75);
+//   box-shadow: 0px 11px 30px 9px rgba(0,0,0,0.75);
+//
+// }
+//
+// #wpContainer {
+//   display: flex;
+// }
+//
+// .wpBtn {
+//   background-color: #2176FF;
+//   color: #fff;
+//   height: 50px;
+//   line-height: 50px;
+//   text-align: center;
+//   width: 50%;
+// }
+//
+// form {
+//   // border: 1px solid blue;
+//   display: flex;
+//   flex-direction: column;
+// }
+//
+// input[type="text" i] {
+//   background-color: #DBD9DB;
+//   border: none;
+//   height: 5vh;
+//   font-size: 20px;
+//   line-height: 20px;
+//   padding: 5px 10px 0;
+// }
+//
+// textarea {
+//   background-color: #DBD9DB;
+//   resize: none;
+//   // get a minimum height in here too
+//   height: 60vh;
+//   padding: 5px 10px 0;
+//   border: none;
+// }
+//
+// input[type="submit" i] {
+//   border: none;
+//   // get a minimum height in here too
+//   height: 7vh;
+// }
