--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -6,6 +6,7 @@
   width: 100vw;
   display: flex;
   justify-content: space-between;
+  background-color: #f8f8f2;
 }
 
 #signup {
@@ -43,7 +44,7 @@ form {
 
 .lineInput:focus {
   outline: none;
-  border-bottom: 3px solid rgba(32, 29, 32, 1);
+  border-bottom: 2px solid rgba(32, 29, 32, 1);
 }
 
 .lineInput::placeholder {
@@ -72,7 +73,14 @@ form {
   height: 60px;
   margin: 2vh 0;
   line-height: 60px;
-  -webkit-box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.35);
-  -moz-box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.35);
-  box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.35);
+  -webkit-box-shadow: 0px 0px 8px 0px rgba(62, 61, 50,0.35);
+  -moz-box-shadow: 0px 0px 8px 0px rgba(62, 61, 50,0.35);
+  box-shadow: 0px 0px 8px 0px rgba(62, 61, 50,0.35);
+}
+
+#signUpBtn:hover {
+  transition: 0.2s ease-in-out;
+  -webkit-box-shadow: 0px 0px 13px 0px rgba(62, 61, 50,0.35);
+  -moz-box-shadow: 0px 0px 13px 0px rgba(62, 61, 50,0.35);
+  box-shadow: 0px 0px 13px 0px rgba(62, 61, 50,0.35);
 }
