Fixed some things

--- a/app/views/snippets/new.html.erb
+++ b/app/views/snippets/new.html.erb
@@ -17,5 +17,11 @@
         <%= f.submit 'Submit', id:'snippetSubmitBtn' %>
       <% end %>
     </div>
+
+      <% if flash[:errors] %>
+        <% flash[:errors].each do |error| %>
+          <p style ="color: red"><%= error %></p>
+        <% end %>
+      <% end %>
   </div>
 </div>
