--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,19 @@
-    <h2>
-      <%= @user.name %>'s Profile
-    </h2>
-    <br><br>
+<h2>
+    <%= @user.name %>'s Profile
+</h2>
+<br><br>
 
-    <% if logged_in? && logged_in_user.id == @user.id %>
-      <%= button_to "Edit Profile", edit_user_path(@user), method: :get%>
+<!-- If user is not logged in forces login else displays Logout button -->
+<% if logged_in? %>
+    Welcome, <%= logged_in_user.name %>
+    <%= button_to "Log out", "/user/logout" %>
+<% else %>
+    <%= link_to "Log In", user_login_path %>
+<% end %>
 
-      <%= button_to "Delete Account", @user, method: :delete %>
-    <% end %>
+<!-- Handles User Edit/Delete -->
+<% if logged_in? && logged_in_user.id == @user.id %>
+    <%= button_to "Edit Profile", edit_user_path(@user), method: :get%>
+
+    <%= button_to "Delete Account", @user, method: :delete %>
+<% end %>
