--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -98,7 +98,7 @@ a {
 }
 
 .userDashboard  {
-  background-color: #201D20;
+  background-color: #3e3d32;
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -113,10 +113,13 @@ nav {
   width: 20vw;
 }
 
-.dashContent {
+.dashContainer {
   width: 100%;
+  color: #fff;
 }
 
+.dashContent {
+}
 .btn {
   background: none;
   outline: none;
@@ -138,6 +141,41 @@ nav {
 
 .userSnippets {
   background-color: #fd971f;
+}
+
+#showSnippet {
+  background-color: #201D20;
+  width: 90%;
+  margin: 0 auto;
+  overflow-y: scroll;
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+}
+
+.snippetHeader {
+  font-family: "Coolvetica Regular";
+  color: #ae81ff;
+}
+
+.snippetLink {
+  color: black;
+  background-color: #ae81ff;
+  font-family: Helvetica;
+  height: 12vh;
+  width: 15vw;
+  line-height: 12vh;
+  text-align: center;
+}
+
+.snippetGrid {
+  width: 100%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(4, 12vh);
+  justify-items: center;
+  justify-content: space-around;
+  grid-row-gap: 5vh;
 }
 
 .userEdit {
