--- a/app/views/snippets/show.html.erb
+++ b/app/views/snippets/show.html.erb
@@ -1,4 +1,13 @@
-<h1><%= @snippet.title %></h1>
-<p><%= markdown(@snippet.code) %></p>  
-
-<%= button_to "User Dashboard", user_path(logged_in_user.id) %>
+<section class="view__snippetShow">
+  <div class="view__snippetContainer">
+    <div class="view__snippetHeaderContainer">
+      <h1 class="view__snippetHeader"><%= @snippet.title %></h1>
+    </div>
+    <article class="view__snippetBody">
+      <p><%= markdown(@snippet.code) %></p>
+    </article>
+    <%= link_to user_path(logged_in_user.id) do %>
+      <div id="snippetEditBtn">User Dashboard</div>
+    <% end %>
+  </div>
+</section>
