added stylng to the user dashboard and user edit and snippet show // not final styles though

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -30,10 +30,6 @@ form {
   text-transform: uppercase;
 }
 
-.floatingLabel, .lineInput {
-  transition: all 0.2s;
-}
-
 .lineInput {
   background-color: transparent;
   border: none;
@@ -99,7 +95,11 @@ a {
 
 .userDashboard  {
   // background-color: #3e3d32;
-  background-color: #201D20;
+  background-color: #25283D;
+  // background-image: asset-url('code-snippet.svg');
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  // background-position: center;
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -111,7 +111,9 @@ nav {
   display: flex;
   flex-direction: column;
   align-content: stretch;
+  justify-content: space-around;
   width: 20vw;
+  padding: 0 0 0 3vw;
 }
 
 .dashContainer {
@@ -128,31 +130,44 @@ nav {
 }
 
 .navLink {
-  height: 25vh;
+  height: 18vh;
   line-height: 25vh;
+  border-radius: 10px;
+}
+
+.navLink:hover {
+  transform: scale(1.025);
+  transition: 0.3s ease-in-out;
 }
 
 .userLink {
-  background-color: #f92672;
+  // background-color: #f92672;
+  background-image: linear-gradient(to right top, #f92672, #ff2c8f, #ff39af, #ff4bcf, #fd5ff0);
 }
 
 .userLogin {
-  background-color: #66d9ef;
+  // background-color: #66d9ef;
+  background-image: linear-gradient(to left bottom, #ae81ff, #71a2ff, #31baff, #30ccff, #66d9ef);
+}
+
+.userEdit {
+  // background-color: #A6E22E;
+  background-image: linear-gradient(to left top, #a1efe4, #82f1cc, #79efa5, #88eb72, #a6e22e);
 }
 
 .userSnippets {
-  background-color: #fd971f;
+  // background-color: #fd971f;
+  background-image: linear-gradient(to right bottom, #e6db74, #eacc5b, #f0bc44, #f6aa30, #fd971f);
 }
 
 .dashContent {
-  background-color: #3e3d32;
+  background-color: #2E2F2F;
   width: 90%;
-  border-radius: 5px;
   margin: 0 auto;
   overflow-y: scroll;
-  -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
-  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.5);
+  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.5);
 }
 
 .headerContainer {
@@ -174,17 +189,19 @@ nav {
   text-transform: uppercase;
 }
 
+// think about a border on the side?
+
 .snippetLink {
   color: #201D20;
-  background-color: #ae81ff;
+  background-color: #A6E22E;
   font-family: "Helvetica";
-  height: fit-content;
+  // height: fit-content;
+  height: 10vh;
   // how do you get them to respond to the length of text, and then by display grid?
   width: 15vw;
-  line-height: 3vh;
   text-align: center;
   font-size: 1.2em;
-  padding: .75em;
+  padding: .75em 0;
   // overflow-y: scroll;
   -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5);
   -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5);
@@ -207,6 +224,7 @@ nav {
   grid-template-columns: repeat(4, 12vw);
   justify-items: center;
   justify-content: space-around;
+  // height: 40vh;
   grid-row-gap: 25px;
   padding: 10vh 0 5vh;
   justify-content: space-around;
@@ -223,6 +241,50 @@ nav {
   padding: 10vh 0 5vh;
 }
 
-.userEdit {
-  background-color: #a6e22e;
+#userEditContainer {
+  background-color: #A6E22E;
+  height: 100vh;
+  width: 100vw;
+}
+
+#userEdit {
+  background-color: #2E2F2F;
+  padding: 5px;
+  // border: 1px solid red;
+  width: 35vw;
+  margin: 0 auto;
+  position: relative;
+  top: 25vh;
+  height: 50vh;
+  border-radius: 25px;
+  -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5);
+  box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5);
+}
+
+#userEdit > h1 {
+  color: #fff;
+}
+
+#editFormSize {
+  width: 25vw;
+  margin: 0 auto;
+}
+
+.edit_lineInput {
+  background-color: transparent;
+  border: none;
+  border-bottom: 3px solid rgba(166, 226, 46, 0.5);
+  margin: 15px 0;
+  padding: 5px;
+}
+
+.edit_lineInput:focus {
+  outline: none;
+  border-bottom: 3px solid rgba(166, 226, 46, 1);
+}
+
+.edit_lineInput::placeholder {
+  font-family: "Coolvetica Regular";
+  text-transform: uppercase;
 }
