--- a/app/views/snippets/show.html.erb
+++ b/app/views/snippets/show.html.erb
@@ -7,7 +7,7 @@
       <p><%= markdown(@snippet.code) %></p>
     </article>
     <%= link_to user_path(logged_in_user.id) do %>
-      <div id="snippetEditBtn">User Dashboard</div>
+      <div id="snippetEditBtn">Return</div>
     <% end %>
   </div>
 </section>
