--- a/app/assets/stylesheets/snippets.scss
+++ b/app/assets/stylesheets/snippets.scss
@@ -81,6 +81,8 @@
   background-color: transparent;
   padding: 2em;
   color: #fff;
+  resize: none;
+  scroll-behavior: smooth;
 }
 
 .snippetInput:focus {
@@ -128,6 +130,7 @@ pre {
   padding: 2.5em;
   color: #fff;
   overflow-y: scroll;
+  border-left: 4px solid #ae81ff;
 }
 
 #snippetEditBtn {
