--- a/app/views/snippets/show.html.erb
+++ b/app/views/snippets/show.html.erb
@@ -3,11 +3,15 @@
     <div class="view__snippetHeaderContainer">
       <h1 class="view__snippetHeader"><%= @snippet.title %></h1>
     </div>
-    <article class="view__snippetBody">
+    <article class="view__snippetBody">.
       <p><%= markdown(@snippet.code) %></p>
     </article>
     <%= link_to user_path(logged_in_user.id) do %>
       <div id="snippetEditBtn">Return</div>
     <% end %>
+
   </div>
+      <%= link_to edit_snippet_path(@snippet.id) do %>
+        <h2> Edit Snippet </h2>
+    <% end %>
 </section>
