--- a/app/assets/stylesheets/snippets.scss
+++ b/app/assets/stylesheets/snippets.scss
@@ -3,6 +3,12 @@
 // // You can use Sass (SCSS) here: https://sass-lang.com/
 // // style for new
 
+html {
+  background-color: #272822;
+  height: 100%;
+  width: 100%;
+}
+
 #snippetContainer {
   background-color: #272822;
   height: 100vh;
@@ -145,3 +151,68 @@ pre {
   background-color: #fd971f;
   text-align: center;
 }
+
+
+// HANDLES SPECIALIZED BUTTONS FOR SNIPPETS
+#private_Radio_Label {
+  height: 5em;
+  width: 100%;
+  line-height: 3em;
+  color: #201D20;
+  border: 0;
+  font-family: "Coolvetica Regular";
+  font-size: 20px;
+  text-transform: uppercase;
+  background-color: #fd971f;
+  text-align: center;
+  border: medium ;
+  display: inline-block;
+}
+
+#private_Radio_Form snippet[is_private] {
+  opacity: 0;
+  position: fixed;
+  width: 0;
+}
+
+#private_Radio_Form label {
+  background-color: #ddd;
+  padding: 10px 20px;
+  font-family: sans-serif, Arial;
+  font-size: 16px;
+  border: 2px solid #444;
+  border-radius: 4px;
+}
+
+#private_Radio_Form #left_button{
+  background-color: green;
+}
+
+#private_Radio_Form #right_button{
+  background-color: red;
+}
+
+#private_Radio_Form input[type="radio"]:checked + label {
+  background-color:#bfb;
+  border-color: #4c4;
+}
+
+#private_Radio_Form input[type="radio"]:focus + label {
+  border: 2px dashed #444;
+}
+
+#private_Radio_Form label:hover {
+  background-color: #dfd;
+}
+
+
+// #snippet_is_private_true {
+//   background-color: #ffead3;
+//   size: 1em;
+// }
+
+// #snippet_is_private_false{
+//   background-color: #ffead3;
+//   size: 1em;
+// }
+
